<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_patient"
        android:id="@+id/btnNewPatient"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/spinnerLang"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_patient"
        android:id="@+id/btnEditPatient"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/btnNewPatient"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerLang"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:spinnerMode="dropdown"
        android:nestedScrollingEnabled="false" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:id="@+id/btnSignUp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/export_csv_patient"
        android:id="@+id/btnExportCsvPatients"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/btnEditPatient"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/export_pdf_patient"
        android:id="@+id/btnExportPdfPatients"
        android:layout_alignTop="@+id/btnExportCsvPatients"
        android:layout_alignEnd="@+id/btnEditPatient"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome.label.prefix"
        android:id="@+id/txtWelcome"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/spinnerLang"/>

</RelativeLayout>
